--- a/index.html
+++ b/index.html
@@ -20,34 +20,29 @@
     }
     .tab-panel {
       display: flex;
-      gap: 12px;
-      margin: 12px 0;
-      flex-wrap: wrap;
       justify-content: center;
+      flex-wrap: nowrap;
+      margin: 10px auto;
+      width: 100%;
+      max-width: 500px;
+      gap: 4px;
     }
     .tab-button {
-      background: linear-gradient(to right, #43e97b, #38f9d7);
+      flex: 1;
+      padding: 8px 0;
+      font-size: 14px;
+      border-radius: 0;
       border: none;
-      padding: 10px 16px;
-      font-size: 16px;
-      border-radius: 12px;
-      color: #fff;
-      font-weight: bold;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      transition: transform 0.1s ease;
-      cursor: pointer;
+      background: #00bfa5;
+      color: white;
+      font-weight: 600;
+      transition: background 0.2s;
+    }
+    .tab-button:hover {
+      background: #009e85;
     }
     .tab-button:active {
-      transform: scale(0.97);
-    }
-    .game-container, #shopContainer, #boosterContainer, #profileContainer {
-      display: none;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-    .balance {
-      font-size: 20px; margin: 10px 0;
+      transform: scale(0.98);
     }
     .tap-image {
       width: 45vw;
@@ -64,194 +59,43 @@
       50% { transform: scale(0.9); }
       100% { transform: scale(1); }
     }
-    .floating-text {
-      position: absolute;
-      font-size: 20px;
-      color: #00c853;
-      font-weight: 700;
-      animation: floatUp 1s ease-out forwards;
-      pointer-events: none;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    }
-    @keyframes floatUp {
-      0% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 0; transform: translateY(-50px); }
-    }
-    .xp-bar-container {
-      width: 90%; height: 14px; background: #cfd8dc; border-radius: 8px; margin: 10px 0;
-    }
-    .xp-bar {
-      height: 100%; background: linear-gradient(to right, #00ffcc, #0072ff);
-      width: 0%; border-radius: 8px;
-    }
-    #leaderboard-modal {
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.95);
-      display: none; flex-direction: column; align-items: center; justify-content: center; z-index: 1000;
-    }
-    #playerLevel {
-      display: flex; align-items: center; gap: 6px;
-      font-size: 18px; font-weight: bold;
-    }
-    .leaderboard-entry {
-      display: flex; align-items: center; gap: 8px; margin: 4px 0;
-    }
-    .leaderboard-entry img {
-      width: 24px; height: 24px; border-radius: 50%;
-    }
-    #profileContainer img {
-      width: 72px; height: 72px; border-radius: 50%; margin: 10px 0;
-    }
-    #profileContainer h2 {
-      font-size: 20px;
-    }
   </style>
 </head>
 <body>
-<div class="balance" id="tokenCount">0 токенов</div>
-<div id="playerLevel">🏅 Уровень: 1</div>
-<div class="xp-bar-container"><div class="xp-bar" id="xpBar"></div></div>
 <div class="tab-panel">
   <button class="tab-button" onclick="toggleTab('gameContainer')">🦈 Игра</button>
   <button class="tab-button" onclick="toggleTab('boosterContainer')">⚡ Бустеры</button>
   <button class="tab-button" onclick="toggleTab('shopContainer')">🛒 Магазин</button>
-  <button class="tab-button" onclick="openLeaderboard()">🏆 Топ</button>
   <button class="tab-button" onclick="toggleTab('profileContainer')">👤 Профиль</button>
 </div>
+
+<div id="gameContainer" class="game-container">
+  <img id="tapImage" class="tap-image" src="shark.png" alt="Shark" onclick="handleTap()" />
+</div>
+
 <script>
 const dbUrl = "https://tralalero-fec07-default-rtdb.firebaseio.com";
 let userId = null, balance = 0, autoTap = 0, xp = 0, level = 1;
 let ownedSkins = { default: true }, currentSkin = 'default';
 let userFirstName = '', userAvatar = '', joinDate = '';
 
-const tokenCount = document.getElementById("tokenCount");
 const tapImage = document.getElementById("tapImage");
-const xpBar = document.getElementById("xpBar");
-const playerLevel = document.getElementById("playerLevel");
 
-function updateBalanceDisplay() {
-  tokenCount.textContent = `${balance} токенов`;
-  document.getElementById("profileTokens").textContent = `Токенов: ${balance}`;
-}
-
-function updateXP(amount) {
-  xp += amount;
-  const need = 20 + (level - 1) * 10;
-  if (xp >= need) {
-    xp -= need;
-    level++;
-    playerLevel.innerHTML = `🏅 Уровень: ${level}`;
-  }
-  const percent = Math.floor((xp / (20 + (level - 1) * 10)) * 100);
-  xpBar.style.width = percent + '%';
-  document.getElementById("profileLevel").textContent = `Уровень: ${level}`;
-}
-
-function showFloatingText(text) {
-  const floatText = document.createElement("div");
-  floatText.className = "floating-text";
-  floatText.textContent = text;
-  const rect = tapImage.getBoundingClientRect();
-  floatText.style.left = rect.left + rect.width / 2 + "px";
-  floatText.style.top = rect.top + rect.height / 2 + "px";
-  document.body.appendChild(floatText);
-  setTimeout(() => floatText.remove(), 1000);
+function toggleTab(id) {
+  ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el => {
+    const element = document.getElementById(el);
+    if (element) element.style.display = 'none';
+  });
+  const selected = document.getElementById(id);
+  if (selected) selected.style.display = 'flex';
 }
 
 function handleTap() {
   balance++;
-  updateBalanceDisplay();
-  updateXP(1);
-  showFloatingText("+1");
   tapImage.classList.add("tap-animation");
   setTimeout(() => tapImage.classList.remove("tap-animation"), 200);
   if (navigator.vibrate) navigator.vibrate(30);
-  saveProgress();
 }
-
-function saveProgress() {
-  if (!userId) return;
-  const user = Telegram.WebApp.initDataUnsafe?.user || {};
-  userFirstName = user.first_name || "Игрок";
-  userAvatar = user.photo_url || "";
-  if (!joinDate) joinDate = new Date().toISOString().split('T')[0];
-
-  fetch(`${dbUrl}/users/${userId}.json`, {
-    method: "PUT",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ balance, currentSkin, xp, level, first_name: userFirstName, photo_url: userAvatar, joinDate })
-  });
-}
-
-function loadProgress() {
-  if (!userId) return;
-  fetch(`${dbUrl}/users/${userId}.json`)
-    .then(res => res.json())
-    .then(data => {
-      if (data) {
-        balance = data.balance || 0;
-        currentSkin = data.currentSkin || 'default';
-        xp = data.xp || 0;
-        level = data.level || 1;
-        userFirstName = data.first_name || "Игрок";
-        userAvatar = data.photo_url || "";
-        joinDate = data.joinDate || new Date().toISOString().split('T')[0];
-
-        updateBalanceDisplay();
-        updateXP(0);
-        updateSkin(currentSkin);
-        document.getElementById("profileName").textContent = userFirstName;
-        document.getElementById("profileAvatar").src = userAvatar;
-        document.getElementById("profileJoin").textContent = `Дата регистрации: ${joinDate}`;
-      }
-    });
-}
-
-function toggleTab(id) {
-  ['gameContainer', 'shopContainer', 'boosterContainer', 'profileContainer'].forEach(el =>
-    document.getElementById(el).style.display = 'none'
-  );
-  document.getElementById(id).style.display = 'flex';
-}
-
-function updateSkin(skin) {
-  if (skin === 'gold') tapImage.src = 'shark_skin1.png';
-  else if (skin === 'leopard') tapImage.src = 'shark_skin2.png';
-  else tapImage.src = 'shark.png';
-}
-
-function openLeaderboard() {
-  document.getElementById('leaderboard-modal').style.display = 'flex';
-  fetch(`${dbUrl}/users.json`).then(res => res.json()).then(data => {
-    const leaderboard = document.getElementById('leaderboardList');
-    leaderboard.innerHTML = '';
-    const users = Object.entries(data || {}).map(([id, info]) => ({ id, ...info }))
-      .sort((a, b) => b.balance - a.balance).slice(0, 10);
-    users.forEach(user => {
-      const name = user.first_name || `ID ${user.id.slice(-4)}`;
-      const avatar = user.photo_url ? `<img src="${user.photo_url}" alt="avatar">` : '';
-      const li = document.createElement('li');
-      li.className = 'leaderboard-entry';
-      li.innerHTML = `${avatar}<strong>${name}</strong>: ${user.balance}`;
-      leaderboard.appendChild(li);
-    });
-  });
-}
-
-setInterval(() => {
-  if (autoTap > 0) {
-    balance += autoTap;
-    updateBalanceDisplay();
-    saveProgress();
-  }
-}, 1000);
-
-window.onload = () => {
-  if (typeof Telegram !== 'undefined' && Telegram.WebApp) {
-    Telegram.WebApp.ready();
-    Telegram.WebApp.expand();
-    userId = Telegram.WebApp.initDataUnsafe?.user?.id?.toString();
-    if (userId) loadProgress();
-  }
-  toggleTab('gameContainer');
-};
 </script>
+</body>
+</html>
